[gd_scene load_steps=39 format=3 uid="uid://cos5po5s14l56"]

[ext_resource type="Script" uid="uid://bwo5386w06j5j" path="res://scripts/systems/BossEncounterWorld2.gd" id="1_bossenc2"]
[ext_resource type="PackedScene" uid="uid://b5uuaa28c07e8" path="res://scenes/boss/PortalWorld2.tscn" id="1_portalw2"]
[ext_resource type="Script" uid="uid://dsknllv0cwko" path="res://scripts/boss/ReturnFromSubArenaHandler.gd" id="1_return"]
[ext_resource type="Texture2D" uid="uid://cfaeejk100p0a" path="res://art/Worlds/Jungle/Mountain/2.png" id="2_hi1dp"]
[ext_resource type="PackedScene" uid="uid://cai81qjmmgokj" path="res://scenes/arena/AscensionCharge.tscn" id="2_rvhjv"]
[ext_resource type="PackedScene" uid="uid://deotiruix5irf" path="res://scenes/enemies/EnemySkeletonGolem.tscn" id="3_golem2"]
[ext_resource type="PackedScene" uid="uid://3n3mym4g3" path="res://scenes/enemies/EnemySkeletonMage.tscn" id="3_mage2"]
[ext_resource type="PackedScene" uid="uid://bq7m3x5k8npwj" path="res://scenes/enemies/EnemyNecromancer.tscn" id="3_necro2"]
[ext_resource type="PackedScene" uid="uid://cjteqkv3dbcyl" path="res://scenes/enemies/EnemyRogueSkeleton.tscn" id="3_rogue2"]
[ext_resource type="Texture2D" uid="uid://br11kihucpinq" path="res://art/Worlds/winter/Background/03.png" id="3_somlc"]
[ext_resource type="PackedScene" uid="uid://ccrejlifa6gwm" path="res://scenes/enemies/EnemyKnightAdd.tscn" id="3_tl7lm"]
[ext_resource type="Script" uid="uid://kl22l7l8p1rd" path="res://scripts/systems/FloorProgressionController.gd" id="4_4onig"]
[ext_resource type="Texture2D" uid="uid://coyp0uveytu1f" path="res://art/Worlds/Rolling Hills/Mountain/cloud2.png" id="4_bytlt"]
[ext_resource type="Texture2D" uid="uid://c0ccbl27yarta" path="res://art/Worlds/Rolling Hills/Mountain/cloud1.png" id="5_4163r"]
[ext_resource type="PackedScene" uid="uid://dlbxvu5p3c25n" path="res://scenes/world/RewardChest.tscn" id="5_strcc"]
[ext_resource type="Script" uid="uid://c34rst6nb4hnx" path="res://scripts/enemies/FloorEnemySpawner.gd" id="6_hi1dp"]
[ext_resource type="Texture2D" uid="uid://c1q3i77fw7hoe" path="res://art/Worlds/Rolling Hills/Mountain/cloud4.png" id="6_saqrm"]
[ext_resource type="Texture2D" uid="uid://crg5j0xxhh6r0" path="res://art/Worlds/Jungle/background/1.png" id="7_somlc"]
[ext_resource type="Texture2D" uid="uid://btj8ejner44my" path="res://art/Worlds/Dungeon/bg/1.png" id="9_hi1dp"]
[ext_resource type="Texture2D" uid="uid://blt6ipqohvu1p" path="res://art/Worlds/Jungle/background/clouds/cloud-7.png" id="10_8wr4c"]
[ext_resource type="PackedScene" uid="uid://c72m65e63bs0o" path="res://scenes/player/player.tscn" id="12_2cxal"]
[ext_resource type="PackedScene" uid="uid://c73g8ryxy8vv5" path="res://scenes/boss/Boss_World2.tscn" id="13_ys2ak"]
[ext_resource type="PackedScene" uid="uid://bxmiuknanvwv6" path="res://scenes/arena/Arena2.tscn" id="14_l6nik"]
[ext_resource type="PackedScene" uid="uid://ojpp3p46grti" path="res://scenes/arena/AscensionSocket.tscn" id="14_r1rxt"]
[ext_resource type="Texture2D" uid="uid://dr2cl7irnnxaa" path="res://art/Worlds/Castle/background_dungeon/l1_sky.png" id="15_rvhjv"]
[ext_resource type="PackedScene" uid="uid://cl782jegm7xux" path="res://scenes/player/OrbLight.tscn" id="15_somlc"]
[ext_resource type="PackedScene" uid="uid://bxxf4cqiyjotx" path="res://scenes/hazards/OrbFallingRock.tscn" id="16_bytlt"]
[ext_resource type="PackedScene" uid="uid://da2fr6n8vi4x7" path="res://scenes/ui/UI.tscn" id="16_devdu"]
[ext_resource type="Resource" uid="uid://dtfg2ntfkn5oa" path="res://styles/HUDStyle.tres" id="17_o5lv8"]
[ext_resource type="PackedScene" uid="uid://cxsb0sxvfl0t" path="res://scenes/ui/DiceModifierChoice.tscn" id="18_awieb"]
[ext_resource type="PackedScene" uid="uid://8hysfqws2ayt" path="res://scenes/player/OrbFlightController.tscn" id="25_bytlt"]
[ext_resource type="AudioStream" uid="uid://dn3jm8svfdr6j" path="res://music/level/(Disc 2) 14 - Catacecaumene.mp3" id="33_devdu"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8wr4c"]
texture = ExtResource("5_4163r")
texture_region_size = Vector2i(799, 367)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-399.5, 50.045456, 399.49994, 50.045456, 399.49994, 150.13635, -399.5, 150.13635)
0:0/0/physics_layer_0/polygon_0/one_way = true

[sub_resource type="TileSet" id="TileSet_devdu"]
tile_size = Vector2i(799, 367)
physics_layer_0/collision_layer = 1
sources/2 = SubResource("TileSetAtlasSource_8wr4c")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_devdu"]
texture = ExtResource("4_bytlt")
texture_region_size = Vector2i(871, 389)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-415.5, 25.54544, 415.5, 25.54544, 415.5, 127.727264, -415.5, 127.727264)
0:0/0/physics_layer_0/polygon_0/one_way = true

[sub_resource type="TileSet" id="TileSet_awieb"]
tile_size = Vector2i(871, 389)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_devdu")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_o5lv8"]
texture = ExtResource("10_8wr4c")
texture_region_size = Vector2i(1020, 565)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-231.81818, 25.681824, 510, -25.681824, 417.2727, 128.40909, -231.81818, 128.40909)
0:0/0/physics_layer_0/polygon_0/one_way = true
0:0/0/physics_layer_0/polygon_1/points = PackedVector2Array(-510, 179.77274, -510, 282.5, 46.363647, 282.5, 46.363647, 231.13635)

[sub_resource type="TileSet" id="TileSet_hyqpu"]
tile_size = Vector2i(1020, 565)
physics_layer_0/collision_layer = 1
sources/1 = SubResource("TileSetAtlasSource_o5lv8")

[node name="World2" type="Node2D"]

[node name="FloorCameraBounds" type="Node2D" parent="."]

[node name="Floor1" type="Node2D" parent="FloorCameraBounds"]

[node name="TopLeft" type="Marker2D" parent="FloorCameraBounds/Floor1"]
position = Vector2(-5000, 2)

[node name="BottomRight" type="Marker2D" parent="FloorCameraBounds/Floor1"]
position = Vector2(5000, 1340)

[node name="Floor2" type="Node2D" parent="FloorCameraBounds"]

[node name="TopLeft" type="Marker2D" parent="FloorCameraBounds/Floor2"]
position = Vector2(-1470, -1121)

[node name="BottomRight" type="Marker2D" parent="FloorCameraBounds/Floor2"]
position = Vector2(1470, 200)

[node name="Floor3" type="Node2D" parent="FloorCameraBounds"]

[node name="TopLeft" type="Marker2D" parent="FloorCameraBounds/Floor3"]
position = Vector2(-1470, -2150)

[node name="BottomRight" type="Marker2D" parent="FloorCameraBounds/Floor3"]
position = Vector2(1470, -900)

[node name="Floor4" type="Node2D" parent="FloorCameraBounds"]

[node name="TopLeft" type="Marker2D" parent="FloorCameraBounds/Floor4"]
position = Vector2(-1470, -3100)

[node name="BottomRight" type="Marker2D" parent="FloorCameraBounds/Floor4"]
position = Vector2(1470, -1925)

[node name="Floor5" type="Node2D" parent="FloorCameraBounds"]

[node name="TopLeft" type="Marker2D" parent="FloorCameraBounds/Floor5"]
position = Vector2(-1470, -4800)

[node name="BottomRight" type="Marker2D" parent="FloorCameraBounds/Floor5"]
position = Vector2(1470, -2800)

[node name="ParallaxRoot" type="Node2D" parent="."]
z_index = -2

[node name="Background" type="Node2D" parent="ParallaxRoot"]
z_index = -9

[node name="l1_sky" type="Sprite2D" parent="ParallaxRoot/Background"]
texture_repeat = 2
position = Vector2(0, -1186)
scale = Vector2(2, 2)
texture = ExtResource("15_rvhjv")

[node name="l1_sky2" type="Sprite2D" parent="ParallaxRoot/Background"]
texture_repeat = 2
position = Vector2(-3837, -1185.965)
scale = Vector2(2, 2)
texture = ExtResource("15_rvhjv")

[node name="l1_sky3" type="Sprite2D" parent="ParallaxRoot/Background"]
texture_repeat = 2
position = Vector2(3835, -1186)
scale = Vector2(2, 2)
texture = ExtResource("15_rvhjv")

[node name="l1_sky4" type="Sprite2D" parent="ParallaxRoot/Background"]
texture_repeat = 2
position = Vector2(0, -16071.999)
scale = Vector2(6, 350)
texture = ExtResource("15_rvhjv")
region_enabled = true
region_rect = Rect2(0, 0, 1920, 79.69696)

[node name="Furthest" type="Parallax2D" parent="ParallaxRoot"]
z_index = -8
scroll_scale = Vector2(0.1, 0.05)
repeat_size = Vector2(1638.365, 0)
repeat_times = 4
follow_viewport = false

[node name="Cloud1" type="Sprite2D" parent="ParallaxRoot/Furthest"]
modulate = Color(1, 1, 1, 0.39215687)
texture_repeat = 2
position = Vector2(-1287, -1196)
scale = Vector2(0.8, 0.8)
texture = ExtResource("4_bytlt")

[node name="Cloud2" type="Sprite2D" parent="ParallaxRoot/Furthest"]
modulate = Color(1, 1, 1, 0.39215687)
texture_repeat = 3
position = Vector2(-679, -1381)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_4163r")

[node name="Cloud3" type="Sprite2D" parent="ParallaxRoot/Furthest"]
modulate = Color(1, 1, 1, 0.19607843)
texture_repeat = 2
position = Vector2(86, -1074)
texture = ExtResource("6_saqrm")

[node name="Cloud4" type="Sprite2D" parent="ParallaxRoot/Furthest"]
modulate = Color(1, 1, 1, 0.5882353)
texture_repeat = 3
position = Vector2(1229, -1556)
texture = ExtResource("5_4163r")

[node name="Far" type="Parallax2D" parent="ParallaxRoot"]
z_index = -7
scroll_scale = Vector2(0.13, 0.08)
scroll_offset = Vector2(0, 73)
repeat_size = Vector2(1638.365, 0)
repeat_times = 3
follow_viewport = false

[node name="Mountain4" type="Sprite2D" parent="ParallaxRoot/Far"]
texture_repeat = 2
position = Vector2(275.00012, -801)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_hi1dp")

[node name="Mountain2" type="Sprite2D" parent="ParallaxRoot/Far"]
texture_repeat = 2
position = Vector2(39, -647.99994)
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_somlc")

[node name="Mid" type="Parallax2D" parent="ParallaxRoot"]
z_index = -6
scroll_scale = Vector2(0.2, 0.1)
scroll_offset = Vector2(0, -59)
repeat_size = Vector2(2375.905, 0)
repeat_times = 3
follow_viewport = false

[node name="LakeMountain1" type="Sprite2D" parent="ParallaxRoot/Mid"]
z_index = -1
texture_repeat = 2
position = Vector2(-64, -306.00006)
scale = Vector2(1, 0.6)
texture = ExtResource("7_somlc")

[node name="BackgroundStatic" type="Node2D" parent="."]

[node name="CastleBG1" type="Sprite2D" parent="BackgroundStatic"]
z_index = -4
position = Vector2(1, 1970)
texture = ExtResource("9_hi1dp")

[node name="CastleBG2" type="Sprite2D" parent="BackgroundStatic"]
z_index = -4
position = Vector2(-2373, 1970)
texture = ExtResource("9_hi1dp")

[node name="CastleBG3" type="Sprite2D" parent="BackgroundStatic"]
z_index = -4
position = Vector2(2375, 1970)
texture = ExtResource("9_hi1dp")

[node name="Arena" parent="." instance=ExtResource("14_l6nik")]

[node name="HangingLight" parent="Arena/ArenaArt/Props" index="0"]
z_index = -1
position = Vector2(-28, 1121)

[node name="DeathZone" parent="Arena" index="4"]
activation_y = -14000.0
player_path = NodePath("../../Player")
debug_logs = false

[node name="ChestSpawn_F3" parent="Arena/ChestSpawns" index="2"]
position = Vector2(-158, -15199)

[node name="Cloud1" type="Node2D" parent="Arena"]
modulate = Color(1, 1, 1, 0.7254902)
position = Vector2(861, -21414)

[node name="TileMapLayer" type="TileMapLayer" parent="Arena/Cloud1"]
position = Vector2(394, 181)
tile_map_data = PackedByteArray(0, 0, 255, 255, 255, 255, 2, 0, 0, 0, 0, 0, 0, 0)
tile_set = SubResource("TileSet_devdu")

[node name="Cloud2" type="Node2D" parent="Arena"]
modulate = Color(1, 1, 1, 0.7254902)
position = Vector2(-715, -21448)
scale = Vector2(0.7, 0.7)

[node name="TileMapLayer2" type="TileMapLayer" parent="Arena/Cloud2"]
position = Vector2(2187.143, 299.9997)
tile_map_data = PackedByteArray(0, 0, 253, 255, 255, 255, 0, 0, 0, 0, 0, 0, 0, 0)
tile_set = SubResource("TileSet_awieb")

[node name="Cloud3" type="Node2D" parent="Arena"]
modulate = Color(1, 1, 1, 0.7254902)
position = Vector2(-28, -21672)
scale = Vector2(0.7, 0.7)

[node name="TileMapLayer3" type="TileMapLayer" parent="Arena/Cloud3"]
position = Vector2(2598.5715, 287.14313)
scale = Vector2(0.99999994, 0.99999994)
tile_map_data = PackedByteArray(0, 0, 253, 255, 255, 255, 1, 0, 0, 0, 0, 0, 0, 0)
tile_set = SubResource("TileSet_hyqpu")

[node name="BossEncounterWorld2" type="Node" parent="."]
script = ExtResource("1_bossenc2")
enemy_scenes = Array[PackedScene]([ExtResource("3_tl7lm"), ExtResource("3_necro2"), ExtResource("3_rogue2"), ExtResource("3_mage2")])
enemy_spawn_positions = Array[Vector2]([Vector2(-300, -21060), Vector2(0, -21060), Vector2(300, -21060)])
portal_scene = ExtResource("1_portalw2")
portal_positions = Array[Vector2]([Vector2(-500, -21250), Vector2(0, -21250), Vector2(500, -21250)])
boss_arena_return_position = Vector2(0, -21060)
ascension_socket_path = NodePath("../AscensionSocket/AscensionSocketA")

[node name="ReturnFromSubArenaHandler" type="Node" parent="."]
script = ExtResource("1_return")
charge_scene = ExtResource("2_rvhjv")

[node name="FloorProgressionController" type="Node" parent="."]
script = ExtResource("4_4onig")
encounter_controller_path = NodePath("../BossEncounterWorld2")
floor_ceiling_y = PackedFloat32Array(200, -14716, -16355, -18069)
boss_start_y = -18069.0
chest_scene = ExtResource("5_strcc")
dice_choice_ui_path = NodePath("../DiceModifierChoice")
chest_spawn_fallback_path = NodePath("")
enable_world2_doors = true
floor1_door_path = NodePath("../Arena/Doorways/Floor1Door")
floor2_door_path = NodePath("../Arena/Doorways/Floor2Door")
door1_interact_offset = Vector2(0, 100)
door2_interact_offset = Vector2(0, 100)
floor2_spawn_delay = 0.5
light_beam_station_path = NodePath("../Arena/LightBeamStation")
orb_target_spawn_path = NodePath("../Arena/Spawns/Floor3/PlayerSpawn")
orb_scene = ExtResource("15_somlc")
rock_scene = ExtResource("16_bytlt")
orb_flight_speed_y = 800.0
orb_lane_half_width = 1200.0
orb_rock_spawn_y_offset = -1500.0
orb_max_active_rocks = 10
orb_finish_y_padding = 1200.0
orb_autopilot_speed = 1200.0
orb_autopilot_arc_height = 1200.0
unlock_floor_1_platforms = Array[NodePath]([NodePath(""), NodePath("")])
unlock_floor_2_platforms = Array[NodePath]([NodePath("")])
unlock_floor_3_platforms = Array[NodePath]([NodePath("")])
unlock_floor_4_platforms = Array[NodePath]([NodePath(""), NodePath("")])
unlock_after_floor_1 = Array[NodePath]([NodePath(""), NodePath("")])
unlock_after_floor_2 = Array[NodePath]([NodePath("")])
unlock_after_floor_3 = Array[NodePath]([NodePath("")])
unlock_after_floor_4 = Array[NodePath]([NodePath(""), NodePath("")])

[node name="FloorEnemySpawner" type="Node" parent="."]
script = ExtResource("6_hi1dp")
enemy_scenes = Array[PackedScene]([ExtResource("3_tl7lm"), ExtResource("3_necro2"), ExtResource("3_rogue2"), ExtResource("3_mage2")])
golem_scene = ExtResource("3_golem2")

[node name="Player" parent="." instance=ExtResource("12_2cxal")]
position = Vector2(-1419, 2573)

[node name="CollisionShape2D" parent="Player" index="0"]
position = Vector2(0, 3.5)

[node name="InteractArea" parent="Player" index="2"]
position = Vector2(-11.56, 51.15)

[node name="CollisionShape2D" parent="Player/InteractArea" index="0"]
position = Vector2(11.554993, -49.155)

[node name="Camera2D" parent="Player" index="10"]
limit_left = -1524
limit_top = -22570
limit_right = 1536
limit_bottom = 3230

[node name="Boss" parent="." instance=ExtResource("13_ys2ak")]
position = Vector2(0, -21246)
collision_mask = 3

[node name="AscensionSocket" type="Node2D" parent="."]

[node name="AscensionSocketA" parent="AscensionSocket" instance=ExtResource("14_r1rxt")]
position = Vector2(-1068, -21133)
scale = Vector2(1, 1)
debug_socket = true

[node name="UI" parent="." instance=ExtResource("16_devdu")]

[node name="PlayerHUDCluster" parent="UI/ScreenRoot/HUDRoot/BottomRight" index="0"]
offset_left = -548.5333
offset_top = -231.91667
offset_right = -22.183332
offset_bottom = -22.183332
style = ExtResource("17_o5lv8")

[node name="PlayerHUDWiring" parent="UI/ScreenRoot/HUDRoot" index="4"]
player_path = NodePath("../../../../Player")
combat_path = NodePath("../../../../Player/Combat")

[node name="EncounterHUDWiring" parent="UI/ScreenRoot/HUDRoot" index="5"]
floor_controller_path = NodePath("../../../../FloorProgressionController")
boss_path = NodePath("../../../../Boss")

[node name="LowHealthPostFX" parent="UI/ScreenRoot/HUDRoot/PlayerDamageFeedback" index="0"]
layout_mode = 3

[node name="LowHealthBorder" parent="UI/ScreenRoot/HUDRoot/PlayerDamageFeedback" index="1"]
layout_mode = 3

[node name="HitFlash" parent="UI/ScreenRoot/HUDRoot/PlayerDamageFeedback" index="2"]
layout_mode = 3

[node name="DiceModifierChoice" parent="." instance=ExtResource("18_awieb")]

[node name="OrbFlightController" parent="." instance=ExtResource("25_bytlt")]
target_spawn_path = NodePath("../Arena/Spawns/Floor3/PlayerSpawn")

[node name="(disc2)14Catacecaumene" type="AudioStreamPlayer" parent="."]
stream = ExtResource("33_devdu")
volume_db = -5.0

[editable path="Arena"]
[editable path="Arena/Geometry/Floor1Celing"]
[editable path="Player"]
[editable path="Player/Visual/Body3DView"]
[editable path="Boss"]
[editable path="AscensionSocket/AscensionSocketA"]
[editable path="UI"]
[editable path="UI/DeathOverlay/RunSummaryPanel"]
[editable path="UI/VictoryUI/Root/CardA"]
[editable path="UI/VictoryUI/Root/CardB"]
[editable path="UI/VictoryUI/Root/CardC"]
[editable path="UI/VictoryUI/Root/CardD"]
[editable path="UI/VictoryUI/Root/CardE"]
[editable path="DiceModifierChoice"]
[editable path="DiceModifierChoice/Root/CardA"]
[editable path="DiceModifierChoice/Root/CardB"]
[editable path="DiceModifierChoice/Root/CardC"]
[editable path="DiceModifierChoice/Root/CardD"]
[editable path="DiceModifierChoice/Root/CardE"]
